--- a/sections/trainees.html
+++ b/sections/trainees.html
@@ -6,7 +6,9 @@
   <p class="mb-4">Diese Trainees sind als zukünftige Mitarbeiter für eure Abteilungen verfügbar</p>
 
   <div class="row">
-    <div class="col-lg-4">
+
+    <!-- Profile Card -->
+    <div class="col-lg-4 col-md-6 col-xs-12">
       <div class="card shadow mb-4 border-left-primary">
         <div class="card-header">
           Trainee #1
@@ -14,53 +16,53 @@
         <div class="card-body profile-body">
           <img class="card-img" src="../img/profiles/placeholder.jpg" alt="Card image">
           <div class="card-img-overlay profile-text">
-              
-                <div class="card-text">
 
-                    <dl class="row">
-                        <dt class="col-lg-4">Name</dt>
-                        <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-                        <dt class="col-lg-4">Studium</dt>
-                        <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-                        <dt class="col-lg-4">Aktuelle Stage</dt>
-                        <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-                    </dl>
+            <div class="card-text">
 
-                </div>
-              </div>
+              <dl class="row">
+                <dt class="col-lg-4">Name</dt>
+                <dd class="col-lg-8">Franzi Wasserzeichen</dd>
+                <dt class="col-lg-4">Studium</dt>
+                <dd class="col-lg-8">Franzi Wasserzeichen</dd>
+                <dt class="col-lg-4">Aktuelle Stage</dt>
+                <dd class="col-lg-8">Franzi Wasserzeichen</dd>
+              </dl>
+
             </div>
-
+          </div>
         </div>
       </div>
-
-      <div class="col-lg-4"></div>
-      <div class="col-lg-4"></div>
-
     </div>
-    <!-- /.row -->
+    <!-- Profile Card End -->
 
-    <div class="row">
-      <div class="col-lg-4"></div>
-      <div class="col-lg-4"></div>
-      <div class="col-lg-4"></div>
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4"></div>
 
-    </div>
-    <!-- /.row -->
-
-    <div class="row">
-      <div class="col-lg-4"></div>
-      <div class="col-lg-4"></div>
-      <div class="col-lg-4"></div>
-
-    </div>
-    <!-- /.row -->
-
-    <div class="row">
-      <div class="col-lg-4"></div>
-      <div class="col-lg-4"></div>
-      <div class="col-lg-4"></div>
-
-    </div>
-    <!-- /.row -->
   </div>
-  <!-- /.container-fluid -->
+  <!-- /.row -->
+
+  <div class="row">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4"></div>
+
+  </div>
+  <!-- /.row -->
+
+  <div class="row">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4"></div>
+
+  </div>
+  <!-- /.row -->
+
+  <div class="row">
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4"></div>
+    <div class="col-lg-4"></div>
+
+  </div>
+  <!-- /.row -->
+</div>
+<!-- /.container-fluid -->
