--- a/sections/profile.html
+++ b/sections/profile.html
@@ -2,15 +2,15 @@
 <div class="container-fluid">
 
   <!-- Page Heading -->
-  <h1 class="h3 mb-2 text-gray-800">Die Trainees</h1>
-  <p class="mb-4">Diese Trainees sind als zukünftige Mitarbeiter für eure Abteilungen verfügbar</p>
+  <!-- <h1 class="h3 mb-2 text-gray-800">NAME</h1>
+  <p class="mb-4">Subtitle</p> -->
 
   <div class="row">
 
     <!-- Profile Card -->
-    <div class="col-lg-4 col-md-6 col-xs-12">
-      <div class="card shadow mb-4 border-left-primary profile-card" data-profileid="dummy">
-        <div class="card-header">
+    <div class="col-lg-12 col-md-12 col-xs-12">
+      <div class="card shadow mb-4 border-left-primary">
+        <div class="card-header h3">
           Trainee #1
         </div>
         <div class="card-body profile-body">
@@ -20,12 +20,12 @@
             <div class="card-text">
 
               <dl class="row">
-                <dt class="col-lg-4">Name</dt>
-                <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-                <dt class="col-lg-4">Studium</dt>
-                <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-                <dt class="col-lg-4">Aktuelle Stage</dt>
-                <dd class="col-lg-8">Franzi Wasserzeichen</dd>
+                <dt class="col-xs-2">Name</dt>
+                <dd class="col-xs-4">Franzi Wasserzeichen</dd>
+                <dt class="col-xs-4">Studium</dt>
+                <dd class="col-xs-8">Tuten und blasen</dd>
+                <dt class="col-xs-4">Aktuelle Stage</dt>
+                <dd class="col-xs-8">Chefetage hinten links</dd>
               </dl>
 
             </div>
