--- a/sections/profile.html
+++ b/sections/profile.html
@@ -14,18 +14,22 @@
           Trainee #1
         </div>
         <div class="card-body profile-body">
-          <img class="card-img" src="../img/profiles/placeholder.jpg" alt="Card image">
+          <img class="card-img" src="./img/profiles/placeholder.jpg" alt="Card image">
           <div class="card-img-overlay profile-text">
 
             <div class="card-text">
 
               <dl class="row">
-                <dt class="col-xs-2">Name</dt>
-                <dd class="col-xs-4">Franzi Wasserzeichen</dd>
-                <dt class="col-xs-4">Studium</dt>
-                <dd class="col-xs-8">Tuten und blasen</dd>
-                <dt class="col-xs-4">Aktuelle Stage</dt>
-                <dd class="col-xs-8">Chefetage hinten links</dd>
+                <dt class="col-4">Name</dt>
+                <dd class="col-8 trn-name">Franzi Wasserzeichen</dd>
+              </dl>
+              <dl class="row">
+                <dt class="col-4">Studium</dt>
+                <dd class="col-8 trn-studies">Tuten und blasen</dd>
+              </dl>
+              <dl class="row">
+                <dt class="col-4">Aktuelle Stage</dt>
+                <dd class="col-8 trn-stage">Chefetage hinten links</dd>
               </dl>
 
             </div>
