--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="index.html">
+      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
         <div class="sidebar-brand-icon">
           <img class="img-fluid" src="img/wdr_logo.svg">
         </div>
-        <div class="sidebar-brand-text mx-3">TEXT</div>
+        <div class="sidebar-brand-text mx-3">Gesicht zeigen</div>
       </a>
 
       <!-- Divider -->
@@ -44,7 +44,7 @@
 
       <!-- Nav Item - Start -->
       <li class="nav-item active">
-        <a class="nav-link" href="index.html">
+        <a class="nav-link" href="#">
           <i class="fas fa-home"></i>
           <span>Start</span></a>
       </li>
