--- a/sections/trainees.html
+++ b/sections/trainees.html
@@ -5,64 +5,51 @@
   <h1 class="h3 mb-2 text-gray-800">Die Trainees</h1>
   <p class="mb-4">Diese Trainees sind als zukünftige Mitarbeiter für eure Abteilungen verfügbar</p>
 
-  <div class="row">
-
-    <!-- Profile Card -->
-    <div class="col-lg-4 col-md-6 col-xs-12">
-      <div class="card shadow mb-4 border-left-primary profile-card" data-profileid="dummy">
-        <div class="card-header">
-          Trainee #1
-        </div>
-        <div class="card-body profile-body">
-          <img class="card-img" src="../img/profiles/placeholder.jpg" alt="Card image">
-          <div class="card-img-overlay profile-text">
-
-            <div class="card-text">
-
-              <dl class="row">
-                <dt class="col-lg-4">Name</dt>
-                <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-                <dt class="col-lg-4">Studium</dt>
-                <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-                <dt class="col-lg-4">Aktuelle Stage</dt>
-                <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-              </dl>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- Profile Card End -->
-
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
+  <div class="row trow-1">
+    
   </div>
   <!-- /.row -->
 
   <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
   </div>
   <!-- /.row -->
 
   <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
   </div>
   <!-- /.row -->
 
   <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
   </div>
   <!-- /.row -->
 </div>
 <!-- /.container-fluid -->
+
+<!-- Profile Card -->
+<template id="profileCardTemplate">
+  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4">
+    <div class="card shadow mb-4 border-left-primary profile-card" data-profileid="dummy">
+      <div class="card-header trn-name">
+        Trainee #1
+      </div>
+      <div class="card-body profile-body">
+        <img class="card-img" src="./img/profiles/placeholder.jpg" alt="Card image">
+        <div class="card-img-overlay profile-text">
+
+          <div class="card-text">
+
+            <!-- <dl class="row">
+            <dt class="col-lg-4">Name</dt>
+            <dd class="col-lg-8">Franzi Wasserzeichen</dd>
+            <dt class="col-lg-4">Studium</dt>
+            <dd class="col-lg-8">Franzi Wasserzeichen</dd>
+            <dt class="col-lg-4">Aktuelle Stage</dt>
+            <dd class="col-lg-8">Franzi Wasserzeichen</dd>
+          </dl> -->
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</template>
+<!-- Profile Card End -->
