fixing safari mobile bug

--- a/sections/profile.html
+++ b/sections/profile.html
@@ -14,7 +14,7 @@
           Trainee #1
         </div>
         <div class="card-body profile-body">
-          <img class="card-img" src="./img/profiles/placeholder.jpg" alt="Card image">
+          <img class="card-img" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
           <div class="card-img-overlay profile-text">
 
             <div class="card-text">
