--- a/sections/trainees.html
+++ b/sections/trainees.html
@@ -27,12 +27,12 @@
 <!-- Profile Card -->
 <template id="profileCardTemplate">
   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4">
-    <div class="card shadow mb-4 border-left-primary profile-card" data-profileid="dummy">
+    <div class="card shadow mb-4 border-left-primary profile-card" data-profileid="dummy" onclick="void(0)">
       <div class="card-header trn-name">
         Trainee #1
       </div>
       <div class="card-body profile-body">
-        <img class="card-img" src="./img/profiles/placeholder.jpg" alt="Card image">
+        <img class="card-img" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
         <div class="card-img-overlay profile-text">
 
           <div class="card-text">
