--- a/sections/profile.html
+++ b/sections/profile.html
@@ -6,7 +6,12 @@
   <p class="mb-4">Subtitle</p> -->
 
   <div class="row">
+    <div class="col">
+      <i class="fas fa-angle-double-left fa-2x"></i>
+    </div>
+  </div>
 
+  <div class="row trn-card trn-card-image">
     <!-- Profile Card -->
     <div class="col-lg-12 col-md-12 col-xs-12">
       <div class="card shadow mb-4 border-left-primary">
@@ -38,34 +43,6 @@
       </div>
     </div>
     <!-- Profile Card End -->
-
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
-  </div>
-  <!-- /.row -->
-
-  <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
-  </div>
-  <!-- /.row -->
-
-  <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
-  </div>
-  <!-- /.row -->
-
-  <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
   </div>
   <!-- /.row -->
 </div>
