--- a/sections/profile.html
+++ b/sections/profile.html
@@ -9,30 +9,34 @@
 
     <!-- Profile Card -->
     <div class="col-lg-12 col-md-12 col-xs-12">
-      <div class="card shadow mb-4 border-left-primary">
-        <div class="card-header h3">
+      <div class="shadow mb-4">
+        <div class="trn-header pb-2 mt-4 mb-2 border-bottom h3">
           Trainee #1
         </div>
-        <div class="card-body profile-body">
-          <img class="card-img" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
-          <div class="card-img-overlay profile-text">
+        <div class="profile-body">
 
-            <div class="card-text">
+          <div class="row">
 
-              <dl class="row">
-                <dt class="col-4">Name</dt>
-                <dd class="col-8 trn-name">Franzi Wasserzeichen</dd>
-              </dl>
-              <dl class="row">
-                <dt class="col-4">Studium</dt>
-                <dd class="col-8 trn-studies">Tuten und blasen</dd>
-              </dl>
-              <dl class="row">
-                <dt class="col-4">Aktuelle Stage</dt>
-                <dd class="col-8 trn-stage">Chefetage hinten links</dd>
-              </dl>
-
+            <div class="profile-text col-sm-6 d-none d-sm-block">
+                <dl class="row">
+                  <dt class="col-4">Name</dt>
+                  <dd class="col-8 trn-name">Franzi Wasserzeichen</dd>
+                </dl>
+                <dl class="row">
+                  <dt class="col-4">Studium</dt>
+                  <dd class="col-8 trn-studies">Tuten und blasen</dd>
+                </dl>
+                <dl class="row">
+                  <dt class="col-4">Aktuelle Stage</dt>
+                  <dd class="col-8 trn-stage">Chefetage hinten links</dd>
+                </dl>
             </div>
+            <div class="col-sm-6 col-xs-12">
+              <img class="float-right" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
+            </div>
+          </div>
+          <div class="row">
+
           </div>
         </div>
       </div>
