--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
-        <a class="nav-link" href="#" id="nav-link-charts">
+        <a class="nav-link" href="#" id="nav-link-quiz">
           <i class="fas fa-fw fa-chart-area"></i>
           <span>Link 3</span></a>
       </li>
