--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <li class="nav-item">
         <a class="nav-link" href="#" id="nav-link-quiz">
           <i class="fas fa-fw fa-chart-area"></i>
-          <span>Link 3</span></a>
+          <span>Quiz</span></a>
       </li>
 
       <!-- Nav Item - Tables -->
