--- a/sections/profile.html
+++ b/sections/profile.html
@@ -4,7 +4,13 @@
   <!-- Page Heading -->
   <!-- <h1 class="h3 mb-2 text-gray-800">NAME</h1>
   <p class="mb-4">Subtitle</p> -->
-
+    <div class="row">
+      <div class="col-12">
+        <span class="icon text-gray-600">
+          <i class="fas fa-arrow-left"></i>
+        </span>zurück
+      </div>
+    </div>
   <div class="row">
 
     <!-- Profile Card -->
@@ -32,7 +38,7 @@
                 </dl>
             </div>
             <div class="col-sm-6 col-xs-12">
-              <img class="float-right" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
+              <img class="img-fluid float-right" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
             </div>
           </div>
           <div class="row">
