--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
       <!-- Nav Item - Tables -->
       <li class="nav-item">
-        <a class="nav-link" href="#" id="nav-link-tables">
+        <a class="nav-link" href="#" id="nav-link-trainees">
           <i class="fas fa-fw fa-table"></i>
           <span>Trainees</span></a>
       </li>
