script load an richtiger stelle

--- a/sections/quiz.html
+++ b/sections/quiz.html
@@ -50,4 +50,4 @@
         </div>
     </div>
     <!-- Binde alle kompilierten Plugins zusammen ein (wie hier unten) oder such dir einzelne Dateien nach Bedarf aus -->
-	<script src="../js/quiz.js"></script>
+	<!-- <script src="/js/quiz.min.js"></script> -->
