--- a/index.1.html
+++ b/index.1.html
@@ -44,13 +44,61 @@
 
       <!-- Nav Item - Start -->
       <li class="nav-item active">
-        <a class="nav-link" href="#" id="nav-link-start">
+        <a class="nav-link" href="#">
           <i class="fas fa-home"></i>
-          <span>Trainees zeigen Gesicht</span></a>
+          <span>Start</span></a>
       </li>
 
       <!-- Divider -->
       <hr class="sidebar-divider">
+
+      <!-- Heading -->
+      <div class="sidebar-heading">
+        Link-Group 1
+      </div>
+
+      <!-- Nav Item - Pages Collapse Menu -->
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
+          aria-controls="collapseTwo">
+          <i class="fas fa-fw fa-cog"></i>
+          <span>Dropdown 1</span>
+        </a>
+        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Dropdown 1:</h6>
+            <a class="collapse-item" href="#">Link 1.1</a>
+            <a class="collapse-item" href="#">Link 1.2</a>
+          </div>
+        </div>
+      </li>
+
+      <!-- Nav Item - Utilities Collapse Menu -->
+      <li class="nav-item">
+        <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseUtilities"
+          aria-expanded="true" aria-controls="collapseUtilities">
+          <i class="fas fa-fw fa-wrench"></i>
+          <span>Dropdown 2</span>
+        </a>
+        <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities" data-parent="#accordionSidebar">
+          <div class="bg-white py-2 collapse-inner rounded">
+            <h6 class="collapse-header">Dropdown 2:</h6>
+            <a class="collapse-item" href="#">Link 2.1</a>
+            <a class="collapse-item" href="#">Link 2.2</a>
+            <div class="collapse-divider"></div>
+            <h6 class="collapse-header">Dropdown 2 B:</h6>
+            <a class="collapse-item" href="#">Link 2.3</a>
+          </div>
+        </div>
+      </li>
+
+      <!-- Divider -->
+      <hr class="sidebar-divider">
+
+      <!-- Heading -->
+      <div class="sidebar-heading">
+        Link-Group 2
+      </div>
 
       <!-- Nav Item - Charts -->
       <li class="nav-item">
@@ -63,7 +111,7 @@
       <li class="nav-item">
         <a class="nav-link" href="#" id="nav-link-trainees">
           <i class="fas fa-fw fa-table"></i>
-          <span>Die Trainees</span></a>
+          <span>Trainees</span></a>
       </li>
 
       <!-- Divider -->
