--- a/sections/profile.html
+++ b/sections/profile.html
@@ -4,13 +4,16 @@
   <!-- Page Heading -->
   <!-- <h1 class="h3 mb-2 text-gray-800">NAME</h1>
   <p class="mb-4">Subtitle</p> -->
-    <div class="row">
-      <div class="col-12">
+  <div class="row">
+    <div class="col-12">
+      <div id="trn-back-button">
         <span class="icon text-gray-600">
           <i class="fas fa-arrow-left"></i>
-        </span>zurück
+        </span>
+        zurück
       </div>
     </div>
+  </div>
   <div class="row">
 
     <!-- Profile Card -->
@@ -24,18 +27,18 @@
           <div class="row">
 
             <div class="profile-text col-sm-6 d-none d-sm-block">
-                <dl class="row">
-                  <dt class="col-4">Name</dt>
-                  <dd class="col-8 trn-name">Franzi Wasserzeichen</dd>
-                </dl>
-                <dl class="row">
-                  <dt class="col-4">Studium</dt>
-                  <dd class="col-8 trn-studies">Tuten und blasen</dd>
-                </dl>
-                <dl class="row">
-                  <dt class="col-4">Aktuelle Stage</dt>
-                  <dd class="col-8 trn-stage">Chefetage hinten links</dd>
-                </dl>
+              <dl class="row">
+                <dt class="col-4">Name</dt>
+                <dd class="col-8 trn-name">Franzi Wasserzeichen</dd>
+              </dl>
+              <dl class="row">
+                <dt class="col-4">Studium</dt>
+                <dd class="col-8 trn-studies">Tuten und blasen</dd>
+              </dl>
+              <dl class="row">
+                <dt class="col-4">Aktuelle Stage</dt>
+                <dd class="col-8 trn-stage">Chefetage hinten links</dd>
+              </dl>
             </div>
             <div class="col-sm-6 col-xs-12">
               <img class="img-fluid float-right" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
