--- a/sections/start.html
+++ b/sections/start.html
@@ -4,7 +4,7 @@
   <!-- Page Heading -->
   <h1 class="h3 mb-4 text-gray-800">Trainees zeigen Gesicht</h1>
   <div>
-    <img src="../img/group/Webseiten_HG.jpg" class="img-fluid">
+    <img src="./img/group/Webseiten_HG.jpg" class="img-fluid">
   </div>
 
 </div>
