--- a/sections/trainees.html
+++ b/sections/trainees.html
@@ -3,22 +3,10 @@
 
   <!-- Page Heading -->
   <h1 class="h3 mb-2 text-gray-800">Die Trainees</h1>
-  <p class="mb-4">Diese Trainees sind als zukünftige Mitarbeiter für eure Abteilungen verfügbar</p>
+  <p class="mb-4">Dies sind die aktuellen Trainees und zukünftigen Mitarbeiter der DPT</p>
 
   <div class="row trow-1">
     
-  </div>
-  <!-- /.row -->
-
-  <div class="row">
-  </div>
-  <!-- /.row -->
-
-  <div class="row">
-  </div>
-  <!-- /.row -->
-
-  <div class="row">
   </div>
   <!-- /.row -->
 </div>
@@ -27,24 +15,15 @@
 <!-- Profile Card -->
 <template id="profileCardTemplate">
   <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4">
-    <div class="card shadow mb-4 border-left-primary profile-card" data-profileid="dummy" onclick="void(0)">
+    <div class="card shadow mb-4 boder-left-trainee-profile profile-card" data-profileid="dummy" onclick="void(0)">
       <div class="card-header trn-name">
         Trainee #1
       </div>
       <div class="card-body profile-body">
-        <img class="card-img" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
+        <img class="card-img" src="" alt="Trainee image"></img>
         <div class="card-img-overlay profile-text">
 
           <div class="card-text">
-
-            <!-- <dl class="row">
-            <dt class="col-lg-4">Name</dt>
-            <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-            <dt class="col-lg-4">Studium</dt>
-            <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-            <dt class="col-lg-4">Aktuelle Stage</dt>
-            <dd class="col-lg-8">Franzi Wasserzeichen</dd>
-          </dl> -->
 
           </div>
         </div>
