--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
     <ul class="navbar-nav bg-wdr sidebar sidebar-dark accordion" id="accordionSidebar">
 
       <!-- Sidebar - Brand -->
-      <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
+      <!-- <a class="sidebar-brand d-flex align-items-center justify-content-center" href="#">
         <div class="sidebar-brand-icon">
           <img class="img-fluid" src="img/wdr_logo.svg">
         </div>
         <div class="sidebar-brand-text mx-3">Gesicht zeigen</div>
-      </a>
+      </a> -->
 
       <!-- Divider -->
-      <hr class="sidebar-divider my-0">
+      <!-- <hr class="sidebar-divider my-0"> -->
 
       <!-- Nav Item - Start -->
       <li class="nav-item active">
