Gruppenfoto hochkant on mobile

--- a/sections/start.html
+++ b/sections/start.html
@@ -3,8 +3,11 @@
 
   <!-- Page Heading -->
   <h1 class="h3 mb-4 text-gray-800">Trainees zeigen Gesicht</h1>
-  <div>
-    <img src="./img/group/Webseiten_HG.jpg" class="img-fluid">
+  <div class=".d-none .d-sm-block">
+    <img src="./img/group/WS_HG_RGB_quer_k.jpg" class="img-fluid">
+  </div>
+  <div class=".d-block .d-sm-none">
+    <img src="./img/group/WS_HG_RGB_hoch_k.jpg" class="img-fluid">
   </div>
 
 </div>
