--- a/sections/profile.html
+++ b/sections/profile.html
@@ -19,7 +19,7 @@
     <!-- Profile Card -->
     <div class="col-lg-12 col-md-12 col-xs-12">
       <div class="shadow mb-4">
-        <div class="trn-header pb-2 mt-4 mb-2 border-bottom h3">
+        <div class="trn-header pb-2 mt-4 mb-2 border-bottom h3 trn-name">
           Trainee #1
         </div>
         <div class="profile-body">
@@ -28,20 +28,32 @@
 
             <div class="profile-text col-sm-6 d-none d-sm-block">
               <dl class="row">
-                <dt class="col-4">Name</dt>
-                <dd class="col-8 trn-name">Franzi Wasserzeichen</dd>
+                <dt class="col-4">Alter</dt>
+                <dd class="col-8 trn-alter">67</dd>
               </dl>
               <dl class="row">
-                <dt class="col-4">Studium</dt>
+                <dt class="col-4">Studiengang</dt>
                 <dd class="col-8 trn-studies">Tuten und blasen</dd>
               </dl>
               <dl class="row">
-                <dt class="col-4">Aktuelle Stage</dt>
+                <dt class="col-4">Trainee bis...</dt>
+                <dd class="col-8 trn-ende">1889</dd>
+              </dl>
+              <dl class="row">
+                <dt class="col-4">Werdegang</dt>
+                <dd class="col-8 trn-werdegang">Kinderstudio</dd>
+              </dl>
+              <dl class="row">
+                <dt class="col-4">bisherige Stagen</dt>
                 <dd class="col-8 trn-stage">Chefetage hinten links</dd>
+              </dl>
+              <dl class="row">
+                <dt class="col-4">Mailadresse</dt>
+                <dd class="col-8 trn-mail">musertmann@wdr.de</dd>
               </dl>
             </div>
             <div class="col-sm-6 col-xs-12">
-              <img class="img-fluid float-right" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
+              <img class="img-fluid float-right card-img" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
             </div>
           </div>
           <div class="row">
@@ -51,35 +63,50 @@
       </div>
     </div>
     <!-- Profile Card End -->
-
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
   </div>
-  <!-- /.row -->
-
-  <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
+  
+  <!-- Fragen -->
+  <div>
+	  <dl class="row">
+	    <dt class="col-lg-4">Frage</dt>
+	    <dd class="col-lg-8">Antwort</dd>
+	  </dl>
+	  <dl class="row">
+	    <dt class="col-lg-4">Frage</dt>
+	    <dd class="col-lg-8">Antwort</dd>
+	  </dl>
+	  <dl class="row">
+	    <dt class="col-lg-4">Frage</dt>
+	    <dd class="col-lg-8">Antwort</dd>
+	  </dl>
+	  <dl class="row">
+	    <dt class="col-lg-4">Frage</dt>
+	    <dd class="col-lg-8">Antwort</dd>
+	  </dl>
+	  <dl class="row">
+	    <dt class="col-lg-4">Frage</dt>
+	    <dd class="col-lg-8">Antwort</dd>
+	  </dl>
+	  <dl class="row">
+	    <dt class="col-lg-4">Frage</dt>
+	    <dd class="col-lg-8">Antwort</dd>
+	  </dl>
+	  <dl class="row">
+	    <dt class="col-lg-4">Frage</dt>
+	    <dd class="col-lg-8">Antwort</dd>
+	  </dl>
+	  <!-- /Fragen -->
+	  <!-- Text -->
+	  <div class="row">
+	    <div class="col-lg-12">bla bla bla</div>
+	  </div>
   </div>
-  <!-- /.row -->
-
-  <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
+  <!-- Text -->
+  <!-- Video -->
+  <div class="row ">
+    <div class="col-lg-12 video"></div>
   </div>
-  <!-- /.row -->
+  <!-- /Video -->
 
-  <div class="row">
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-    <div class="col-lg-4"></div>
-
-  </div>
-  <!-- /.row -->
 </div>
 <!-- /.container-fluid -->
