--- a/sections/profile.html
+++ b/sections/profile.html
@@ -14,18 +14,16 @@
   </div>
   
   <!-- Profile Card -->
-  <div class="row">
-    <div class="col-lg-12 col-md-12 col-xs-12">
-      <div class="shadow mb-4">
-        <div class="trn-header pb-2 mt-4 mb-2 border-bottom h3 trn-name">
+  <div class="shadow mx-auto">
+        <div class="trn-header pb-2 mt-4 pt-2 mb-2 border-bottom h3 trn-name">
           Trainee #1
         </div>
-        <div class="profile-body">
+        <div>
           <div class="row">
-            <div class="profile-text col-sm-8 d-none d-sm-block">
+             <div class="profile-text col-md-6 pt-1">
               <dl class="row">
                 <dt class="col-4">Alter</dt>
-                <dd class="col-8 trn-alter">68</dd>
+                <dd class="col-8 trn-alter">69</dd>
               </dl>
               <dl class="row">
                 <dt class="col-4">Studiengang</dt>
@@ -33,7 +31,7 @@
               </dl>
               <dl class="row">
                 <dt class="col-4">Trainee bis...</dt>
-                <dd class="col-8 trn-ende">1889</dd>
+                <dd class="col-8 trn-dauer">1890</dd>
               </dl>
               <dl class="row">
                 <dt class="col-4">Werdegang</dt>
@@ -45,60 +43,66 @@
               </dl>
               <dl class="row">
                 <dt class="col-4">Mailadresse</dt>
-                <dd class="col-8 trn-mail">musertmann@wdr.de</dd>
+                <dd class="col-8 trn-mail">mustermann@wdr.de</dd>
               </dl>
             </div>
-            <div class="col-sm-4 col-xs-12">
-              <img class="img-fluid float-right card-img" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
+            <div class="col-md-6 d-none d-md-block">
+              <img class="img-fluid float-right trn-picture" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
             </div>
           </div>
-        </div>
       </div>
-    </div>
-  </div>
-    <!-- Profile Card End -->
+    
     <!-- Fragen -->
-	  <div>
-		  <dl class="row">
-		    <dt class="col-lg-4">Frage</dt>
-		    <dd class="col-lg-8">Antwort</dd>
+	  <div class="profile-questions d-none d-md-block">
+		  <dl>
+		    <dt>Meine lieblings WDR-Sendung ist...</dt>
+		    <dd class="font-italic trn-antw1">Antwort</dd>
 		  </dl>
-		  <dl class="row">
-		    <dt class="col-lg-4">Frage</dt>
-		    <dd class="col-lg-8">Antwort</dd>
+		  <dl>
+		    <dt>Das verbinde ich mit dem WDR...</dt>
+		    <dd class="font-italic trn-antw2">Antwort</dd>
 		  </dl>
-		  <dl class="row">
-		    <dt class="col-lg-4">Frage</dt>
-		    <dd class="col-lg-8">Antwort</dd>
+		  <dl>
+		    <dt>Als Kind wollte ich werden...</dt>
+		    <dd class="font-italic trn-antw3">Antwort</dd>
 		  </dl>
-		  <dl class="row">
-		    <dt class="col-lg-4">Frage</dt>
-		    <dd class="col-lg-8">Antwort</dd>
+		  <dl>
+		    <dt>Welche Superkraft h&auml;tte ich gerne...</dt>
+		    <dd class="font-italic trn-antw4">Antwort</dd>
 		  </dl>
-		  <dl class="row">
-		    <dt class="col-lg-4">Frage</dt>
-		    <dd class="col-lg-8">Antwort</dd>
+		  <dl>
+		    <dt>Mein Lieblingsgericht ist...</dt>
+		    <dd class="font-italic trn-antw5">Antwort</dd>
 		  </dl>
-		  <dl class="row">
-		    <dt class="col-lg-4">Frage</dt>
-		    <dd class="col-lg-8">Antwort</dd>
+		  <dl>
+		    <dt>Meine F&auml;higkeiten/St&auml;rken sind...</dt>
+		    <dd class="font-italic trn-antw6">Antwort</dd>
 		  </dl>
-		  <dl class="row">
-		    <dt class="col-lg-4">Frage</dt>
-		    <dd class="col-lg-8">Antwort</dd>
+		  <dl>
+		    <dt>Meine Hobbies sind...</dt>
+		    <dd class="font-italic trn-antw7">Antwort</dd>
 		  </dl>
 		  <!-- /Fragen -->
-		  <!-- Text -->
-		  <div class="row">
-		    <div class="col-lg-12">bla bla bla</div>
-		  </div>
+	  </div>
+		 
+		 
+      <!-- Text -->
+	  <div class="profile-text d-none d-md-block">
+		    <div class="font-italic ptext">bla bla bla</div>
 	  </div>
 	  <!-- Text -->
+	  
+
 	  <!-- Video -->
-	  <div class="row ">
-	    <div class="col-lg-12 video"></div>
+	  <div>
+	    <div class="embed-responsive embed-responsive-16by9">
+	    	 <iframe class="embed-responsive-item trn-video" src="https://youtu.be/T2L1V8LVtas"></iframe>
+	    </div>
 	  </div>
 	  <!-- /Video -->
-
+  
+  <!-- Profile Card End -->
+  </div>
+  
 </div>
 <!-- /.container-fluid -->
