--- a/sections/profile.html
+++ b/sections/profile.html
@@ -96,7 +96,7 @@
 	  <!-- Video -->
 	  <div>
 	    <div class="embed-responsive embed-responsive-16by9">
-	    	 <iframe class="embed-responsive-item trn-video" src="https://youtu.be/T2L1V8LVtas"></iframe>
+	    	 <iframe class="embed-responsive-item trn-video" src="http://www.youtube.com/embed/T2L1V8LVtas"></iframe>
 	    </div>
 	  </div>
 	  <!-- /Video -->
