--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <!-- Custom scripts for all pages-->
   <script src="js/sb-admin-2.min.js"></script>
 
-  <script src="js/main.js"></script>
+  <script src="js/main.classic.js"></script>
 
 </body>
 
