--- a/sections/quiz.html
+++ b/sections/quiz.html
@@ -6,10 +6,10 @@
 			<div id="question" class="jumbotron">
 				<div class="container">
 				  <div class="row">
-					<div class="col-sm-4 col-md-6 col-lg-2">
+					<div class="col-sm-6 col-lg-2">
 						<img id="potrait" class="img-rounded img-fluid">
 					</div>
-					<div class="col-sm-8 col-md-6 col-lg-10">
+					<div class="col-sm-6 col-lg-10">
 						<h6>Frage <span id="qno"></span></h6><br>
 						<h5><span id="autor"></span></h5>
 						<p id="question_text" class="font-italic" style="white-space: normal;"></p>
