--- a/sections/profile.html
+++ b/sections/profile.html
@@ -1,107 +1,102 @@
-<!-- Begin Page Content -->
-<div class="container-fluid m-0 p-0">
-
-  <!-- Page Heading -->
-  <div class="row">
-      <div class="col-12" id="trn-back-button">
-        <span class="icon text-gray-600">
-          <i class="fas fa-arrow-left mb-3"></i>
-        </span>
-        zurück
-      </div>
-  </div>
-  
-  <!-- Profile Card -->
-  <div class="shadow rounded pl-1">
-        
-        <div class="trn-header border-bottom h1 trn-name">
-          Trainee #1
-        </div>
-        <div class="profile-body">
-        	<div class="row">
-             <div class="col-md-8 pt-1">
-              <dl class="row">
-                <dt class="col-4">Alter</dt>
-                <dd class="col-8 trn-alter">68</dd>
-              </dl>
-              <dl class="row">
-                <dt class="col-4">Studiengang</dt>
-                <dd class="col-8 trn-studies">Tuten und blasen</dd>
-              </dl>
-              <dl class="row">
-                <dt class="col-4">Trainee bis...</dt>
-                <dd class="col-8 trn-dauer">1890</dd>
-              </dl>
-              <dl class="row">
-                <dt class="col-4">Werdegang</dt>
-                <dd class="col-8 trn-werdegang">Kinderstudio</dd>
-              </dl>
-              <dl class="row">
-                <dt class="col-4">bisherige Stagen</dt>
-                <dd class="col-8 trn-stage">Chefetage hinten links</dd>
-              </dl>
-              <dl class="row">
-                <dt class="col-4">Mailadresse</dt>
-                <dd class="col-8 trn-mail">mustermann@wdr.de</dd>
-              </dl>
-            </div>
-             <div class="col-md-4">
-              	<img class="img-fluid trn-picture d-none d-md-block" src="./img/profiles/placeholder.jpg" alt="Card image"></img>
-             </div>
-          </div>
-       
-	  	  <!-- Video -->
-	  <div class="row">
-		  <div class="col-sm-6">
-		    <div class="embed-responsive embed-responsive-16by9">
-		    	 <iframe class="embed-responsive-item trn-video pt-2" src="http://www.youtube.com/embed/T2L1V8LVtas"></iframe>
-		    </div>
-		  </div>
-		  <!-- /Video -->    
-	      <!-- Fragen -->
-		  <div class="col-sm-6">
-		  	<div class="font-italic ptext pt2">bla bla bla</div>	  
-	      </div>
-	      <!-- /Fragen -->  
-	  </div>
-	  
-		  <!-- Text -->
-			  <div class="row py-2">
-			  	<div class="col-12">
-				    <dl>
-		    			<dt>Meine lieblings WDR-Sendung ist...</dt>
-		    			<dd class="font-italic trn-antw1">Antwort</dd>
-		  			</dl>
-					<dl>
-					    <dt>Das verbinde ich mit dem WDR...</dt>
-					    <dd class="font-italic trn-antw2">Antwort</dd>
-					</dl>
-					<dl>
-					    <dt>Als Kind wollte ich werden...</dt>
-					    <dd class="font-italic trn-antw3">Antwort</dd>
-					</dl>
-					<dl>
-					    <dt>Welche Superkraft h&auml;tte ich gerne...</dt>
-					    <dd class="font-italic trn-antw4">Antwort</dd>
-					</dl>
-					<dl>
-					    <dt>Mein Lieblingsgericht ist...</dt>
-					    <dd class="font-italic trn-antw5">Antwort</dd>
-					</dl>
-					<dl>
-					    <dt>Meine F&auml;higkeiten/St&auml;rken sind...</dt>
-					    <dd class="font-italic trn-antw6">Antwort</dd>
-					</dl>
-					<dl>
-					    <dt>Meine Hobbies sind...</dt>
-					    <dd class="font-italic trn-antw7">Antwort</dd>
-					</dl>
-			  </div>
-			  </div>
-			  <!-- Text -->
-	  </div>
-  <!-- Profile Card End -->
-  </div>
-  
+<!-- Page Heading -->
+<div class="row">
+	<div class="col-12" id="trn-back-button">
+		<span class="icon text-gray-600">
+			<i class="fas fa-arrow-left mb-3"></i>
+		</span>
+		zurück
+	</div>
 </div>
-<!-- /.container-fluid -->
+
+<!-- Profile Card -->
+<div class="shadow rounded pl-1">
+
+	<div class="trn-header border-bottom h1 trn-name">
+		Trainee #1
+	</div>
+	<div class="profile-body">
+		<div class="row">
+			<div class="col-md-8 pt-1">
+				<dl class="row">
+					<dt class="col-4">Alter</dt>
+					<dd class="col-8 trn-alter">68</dd>
+				</dl>
+				<dl class="row">
+					<dt class="col-4">Studiengang</dt>
+					<dd class="col-8 trn-studies">Tuten und blasen</dd>
+				</dl>
+				<dl class="row">
+					<dt class="col-4">Trainee bis...</dt>
+					<dd class="col-8 trn-dauer">1890</dd>
+				</dl>
+				<dl class="row">
+					<dt class="col-4">Werdegang</dt>
+					<dd class="col-8 trn-werdegang">Kinderstudio</dd>
+				</dl>
+				<dl class="row">
+					<dt class="col-4">bisherige Stagen</dt>
+					<dd class="col-8 trn-stage">Chefetage hinten links</dd>
+				</dl>
+				<dl class="row">
+					<dt class="col-4">Mailadresse</dt>
+					<dd class="col-8 trn-mail">mustermann@wdr.de</dd>
+				</dl>
+			</div>
+			<div class="col-md-4">
+				<img class="img-fluid trn-picture d-none d-md-block" src="./img/profiles/placeholder.jpg"
+					alt="Card image"></img>
+			</div>
+		</div>
+
+		<!-- Video -->
+		<div class="row">
+			<div class="col-sm-6">
+				<div class="embed-responsive embed-responsive-16by9">
+					<iframe class="embed-responsive-item trn-video pt-2" src="http://www.youtube.com/embed/T2L1V8LVtas"></iframe>
+				</div>
+			</div>
+			<!-- /Video -->
+			<!-- Fragen -->
+			<div class="col-sm-6">
+				<div class="font-italic ptext pt2">bla bla bla</div>
+			</div>
+			<!-- /Fragen -->
+		</div>
+
+		<!-- Text -->
+		<div class="row py-2">
+			<div class="col-12">
+				<dl>
+					<dt>Meine lieblings WDR-Sendung ist...</dt>
+					<dd class="font-italic trn-antw1">Antwort</dd>
+				</dl>
+				<dl>
+					<dt>Das verbinde ich mit dem WDR...</dt>
+					<dd class="font-italic trn-antw2">Antwort</dd>
+				</dl>
+				<dl>
+					<dt>Als Kind wollte ich werden...</dt>
+					<dd class="font-italic trn-antw3">Antwort</dd>
+				</dl>
+				<dl>
+					<dt>Welche Superkraft h&auml;tte ich gerne...</dt>
+					<dd class="font-italic trn-antw4">Antwort</dd>
+				</dl>
+				<dl>
+					<dt>Mein Lieblingsgericht ist...</dt>
+					<dd class="font-italic trn-antw5">Antwort</dd>
+				</dl>
+				<dl>
+					<dt>Meine F&auml;higkeiten/St&auml;rken sind...</dt>
+					<dd class="font-italic trn-antw6">Antwort</dd>
+				</dl>
+				<dl>
+					<dt>Meine Hobbies sind...</dt>
+					<dd class="font-italic trn-antw7">Antwort</dd>
+				</dl>
+			</div>
+		</div>
+		<!-- Text -->
+	</div>
+	<!-- Profile Card End -->
+</div>
