Einzelne Design Änderungen

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <button id="sidebarToggleTop" class="btn btn-link d-md-none rounded-circle mr-3">
             <i class="fa fa-bars"></i>
           </button>
-
+		  <h3 class="mx-auto text-gray-800 content-title">Trainees zeigen Gesicht</h3>
         </nav>
         <!-- End of Topbar -->
 
