--- a/sections/profile.html
+++ b/sections/profile.html
@@ -10,7 +10,7 @@
 
 <!-- Profile Card -->
   <div class="card shadow-lg p-2 rounded pl-1">
-	  <div class="trn-header border-bottom h1 trn-name">
+	  <div class="trn-header border-bottom h3 trn-name">
 		Trainee #1
 	  </div>
 	  <!--
@@ -21,34 +21,34 @@
 			  <div class="col-sm-12 col-lg-6 m-auto p-auto ">
 					<dl class="row">
 					  <dt class="col-4">Alter</dt>
-					  <dd class="col-8 trn-alter">68</dd>
+					  <dd class="col-8 trn-alter"></dd>
 					</dl>
 					<dl class="row">
 					  <dt class="col-4">Studiengang</dt>
-					  <dd class="col-8 trn-studies">Tuten und blasen</dd>
+					  <dd class="col-8 trn-studies"></dd>
 					</dl>
 					<dl class="row">
 					  <dt class="col-4">Trainee bis...</dt>
-					  <dd class="col-8 trn-dauer">1890</dd>
+					  <dd class="col-8 trn-dauer"></dd>
 					</dl>
 					<dl class="row">
 					  <dt class="col-4">Werdegang</dt>
-					  <dd class="col-8 trn-werdegang">Kinderstudio</dd>
+					  <dd class="col-8 trn-werdegang"></dd>
 					</dl>
 					<dl class="row">
 					  <dt class="col-4">bisherige Stagen</dt>
-					  <dd class="col-8 trn-stage">Chefetage hinten links</dd>
+					  <dd class="col-8 trn-stage"></dd>
 					</dl>
 					<dl class="row">
 					  <dt class="col-4">Mailadresse</dt>
-					  <dd class="col-8 trn-mail">mustermann@wdr.de</dd>
+					  <dd class="col-8 trn-mail"></dd>
 					</dl>
 			  </div>
 			  
 			  <!--Video-->
 			  <div class="col-sm-8 col-lg-6 m-auto p-auto">
 				  <div class="embed-responsive embed-responsive-16by9">
-					  <iframe class="embed-responsive-item trn-video pt-2" src="http://www.youtube.com/embed/T2L1V8LVtas"></iframe>
+					  <iframe class="embed-responsive-item trn-video pt-2" src=""></iframe>
 				  </div>
 			  </div>
 			  <!-- /Video -->
