--- a/sections/trainees.html
+++ b/sections/trainees.html
@@ -1,5 +1,4 @@
 <!-- Page Heading -->
-<h1 class="h3 mb-2 text-gray-800">Die Trainees</h1>
 <p class="mb-4">Dies sind die aktuellen Trainees und zukünftigen Mitarbeiter der DPT</p>
 
 <div class="row trow-1">
@@ -10,7 +9,7 @@
 
 <!-- Profile Card -->
 <template id="profileCardTemplate">
-  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-4">
+  <div class="col-sm-6 col-md-4">
     <div class="card shadow mb-4 boder-left-trainee-profile profile-card" data-profileid="dummy" onclick="void(0)">
       <div class="card-header trn-name">
         Trainee #1
