--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
       <!-- Nav Item - Charts -->
       <li class="nav-item">
         <a class="nav-link" href="#" id="nav-link-quiz">
-          <i class="fas fa-fw fa-chart-area"></i>
+          <i class="fas fa-fw fa-dice"></i>
           <span>Quiz</span></a>
       </li>
 
       <!-- Nav Item - Tables -->
       <li class="nav-item">
         <a class="nav-link" href="#" id="nav-link-trainees">
-          <i class="fas fa-fw fa-table"></i>
+          <i class="fas fa-fw fa-users"></i>
           <span>Die Trainees</span></a>
       </li>
 
