--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
       <!-- End of Main Content -->
 
       <!-- Footer -->
-      <footer class="sticky-footer bg-white">
-        <div class="container my-auto">
-          <div class="copyright text-center my-auto">
+      <footer class="sticky-footer bg-white">"/Volumes/usbstick/Netzwerkveranstaltung/todo"
+        <div class="container my-0 py-0">
+          <div class="copyright text-center my-0 py-0">
             <span>&copy; WDR Trainees NV2019</span>
           </div>
         </div>
