--- a/sections/profile.html
+++ b/sections/profile.html
@@ -57,11 +57,7 @@
 			  <div class="col-sm-12 col-md-12 mx-auto px-auto">
 				  <dl class="row">
 					  <dt class="col-md-12 col-lg-7 col-xl-7">Über mich</dt>
-					  <dd class="col-md-12 col-lg-9 col-xl-8 ptext">Hier sehen Sie einen Beispieltext mit zweihundert Wörtern. Auf Texte mit diesen Umfang stoßen Sie im Web, wenn Sie beispielsweise eine Kurzmeldung lesen. Aber nicht nur als Kurzmeldungen eignen sich diese Texte. Sie werden sie auch als kürzere Produktbeschreibung in Onlineshops entdecken.  Meist verwenden Shopsysteme eine Kurzbeschreibung mit maximal 50 Wörtern.
-					  Ähnlich wie hier auf dieser Seite können Sie sehen, was ich meine. Nach der Einleitung wird es also etwas ausführlicher. Im eigentlichen Beschreibungsteil können Sie alle wichtigen Daten zu einem Produkt oder Dienstleistung reinbringen. Sie haben sogar noch genügend Platz um die wichtigsten Verkaufsargumente aufzuführen. Aber Vorsicht, geben Sie sich Mühe bei der Textgestaltung und gestalten Sie ihn für das Auge scanbar.
-					  Nutzen Sie beispielsweise, wie hier auch, Zwischenabschnitte um Ihren Text leichter lesbar und verständlicher zu schreiben. Es versteht sich von selbst, dass Sie diese Abschnitte sinnvoll unterteilen. Am besten Sie beschränken sich auf ein bis maximal zwei Argumente je Abschnitt. So bleibt Ihr Text leichter für den Websitebesucher verständlich.
-					  Bei so einem Kurztext haben Sie sogar noch die Möglichkeit einen Schlusstext zu formulieren. Auf einer Landingpage stehen meist hier Formulierung, die eine Call-To-Action beinhalten. Etwa so: “ Worauf warten Sie noch? Fordern Sie jetzt ein aktuelles Angebot unverbindlich an!</div>	  
-					  </dd>
+					  <dd class="col-md-12 col-lg-9 col-xl-8 trn-ptext text-justify"></dd>
 				  </dl>
 			  </div>
 			  <!-- /Text -->
