Profile Ansicht aktualisiert

--- a/sections/profile.html
+++ b/sections/profile.html
@@ -1,15 +1,15 @@
   <!-- Page Heading -->
   <div class="row">
 	<div class="col-12" id="trn-back-button">
-	  <span class="icon text-gray-600">
-		<i class="fas fa-arrow-left mb-3"></i>
+	  <span class="icon text-gray-600 mb-3">
+		<i class="fas fa-arrow-left"></i>
 	  </span>
 	  zurück
 	</div>
   </div>
 
 <!-- Profile Card -->
-  <div class="card shadow-lg p-2 rounded pl-1">
+  <div class="card shadow-lg mb-4 rounded pl-1">
 	  <div class="trn-header border-bottom h3 trn-name">
 		Trainee #1
 	  </div>
@@ -20,28 +20,28 @@
 		  <div class="row">
 			  <div class="col-sm-12 col-lg-6 m-auto p-auto ">
 					<dl class="row">
-					  <dt class="col-4">Alter</dt>
-					  <dd class="col-8 trn-alter"></dd>
+					  <dt class="col-12 col-md-3">Alter</dt>
+					  <dd class="col-12 col-md-9 trn-alter"></dd>
 					</dl>
 					<dl class="row">
-					  <dt class="col-4">Studiengang</dt>
-					  <dd class="col-8 trn-studies"></dd>
+					  <dt class="col-12 col-md-3">Studiengang</dt>
+					  <dd class="col-12 col-md-9 trn-dauer"></dd>
 					</dl>
 					<dl class="row">
-					  <dt class="col-4">Trainee bis...</dt>
-					  <dd class="col-8 trn-dauer"></dd>
+					  <dt class="col-12 col-md-3">Trainee bis...</dt>
+					  <dd class="col-12 col-md-9 trn-dauer"></dd>
 					</dl>
 					<dl class="row">
-					  <dt class="col-4">Werdegang</dt>
-					  <dd class="col-8 trn-werdegang"></dd>
+					  <dt class="col-12 col-lg-3">Werdegang</dt>
+					  <dd class="col-12 col-lg-9 trn-werdegang"></dd>
 					</dl>
 					<dl class="row">
-					  <dt class="col-4">bisherige Stagen</dt>
-					  <dd class="col-8 trn-stage"></dd>
+					  <dt class="col-12 col-lg-3">bisherige Stagen</dt>
+					  <dd class="col-12 col-lg-9 trn-stage"></dd>
 					</dl>
 					<dl class="row">
-					  <dt class="col-4">Mailadresse</dt>
-					  <dd class="col-8 trn-mail"></dd>
+					  <dt class="col-12 col-md-3">Mailadresse</dt>
+					  <dd class="col-12 col-md-9 trn-mail"></dd>
 					</dl>
 			  </div>
 			  
@@ -54,10 +54,10 @@
 			  <!-- /Video -->
 			  
 			  <!-- Text -->
-			  <div class="col-sm-12 col-md-12 mx-auto px-auto">
+			  <div class="col-12 pr-4 pt-2">
 				  <dl class="row">
-					  <dt class="col-md-12 col-lg-7 col-xl-7">Über mich</dt>
-					  <dd class="col-md-12 col-lg-9 col-xl-8 trn-ptext text-justify"></dd>
+					  <dt class="col-12">Über mich</dt>
+					  <dd class="col-12 trn-ptext text-justify"></dd>
 				  </dl>
 			  </div>
 			  <!-- /Text -->
