--- a/sections/profile.html
+++ b/sections/profile.html
@@ -10,7 +10,7 @@
 
 <!-- Profile Card -->
   <div class="card shadow-lg mb-4 rounded pl-1">
-	  <div class="trn-header border-bottom h3 trn-name">
+	  <div class="trn-header border-bottom h3 trn-name pt-2 pb-2">
 		Trainee #1
 	  </div>
 	  <!--
@@ -25,7 +25,7 @@
 					</dl>
 					<dl class="row">
 					  <dt class="col-12 col-md-3">Studiengang</dt>
-					  <dd class="col-12 col-md-9 trn-dauer"></dd>
+					  <dd class="col-12 col-md-9 trn-studies"></dd>
 					</dl>
 					<dl class="row">
 					  <dt class="col-12 col-md-3">Trainee bis...</dt>
