--- a/sections/trainees.html
+++ b/sections/trainees.html
@@ -1,5 +1,5 @@
 <!-- Page Heading -->
-<p class="mb-4">Dies sind die aktuellen Trainees und zukünftigen Mitarbeiter der DPT</p>
+<p class="pt-3">Dies sind die aktuellen Trainees und zukünftigen Mitarbeiter der DPT</p>
 
 <div class="row trow-1">
 
