copyright mal rausgenommen

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <footer class="sticky-footer bg-white">
         <div class="container my-0 py-0">
           <div class="copyright text-center my-0 py-0">
-            <span>&copy; WDR Trainees NV2019</span>
+            <span>DPT Trainees Netzwerkveranstaltung 2019</span>
           </div>
         </div>
       </footer>
